# GalleryTEC

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  cupcake.json  data.js  main.cpp
DataBase/: DataBaseHandler.cpp  DataBaseHandler.h  Users.cpp  Users.h
Interface/: Interface.cpp  Interface.h  MainWindow.cpp  MainWindow.h
RAIDStorage/Disk1/: data.json
RAIDStorage/Disk2/: data.json
RAIDStorage/Disk3/: data.json
RAIDStorage/Disk4/: data.json
RAIDStorage/Disk5/: data.json
StorageManager/: RaidManager.cpp  RaidManager.h  dataSetter.cpp  dataSetter.h  raidManager.cpp  raidManager.h
data_structures/: HuffmanBinaryTree.cpp  HuffmanBinaryTree.h  TreeNode.cpp  TreeNode.h
html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _compressor_8cpp.html  _compressor_8cpp__incl.map  _compressor_8cpp__incl.md5  _compressor_8h.html  _compressor_8h__dep__incl.map  _compressor_8h__dep__incl.md5  _compressor_8h__incl.map  _compressor_8h__incl.md5  _compressor_8h_source.html  _data_base_handler_8cpp.html  _data_base_handler_8cpp__incl.map  _data_base_handler_8cpp__incl.md5  _data_base_handler_8h.html  _data_base_handler_8h__dep__incl.map  _data_base_handler_8h__dep__incl.md5  _data_base_handler_8h__incl.map  _data_base_handler_8h__incl.md5  _data_base_handler_8h_source.html  _dictionary_8cpp.html  _dictionary_8cpp__incl.map  _dictionary_8cpp__incl.md5  _dictionary_8h.html  _dictionary_8h__dep__incl.map  _dictionary_8h__dep__incl.md5  _dictionary_8h__incl.map  _dictionary_8h__incl.md5  _dictionary_8h_source.html  _huffman_binary_tree_8cpp.html  _huffman_binary_tree_8cpp__incl.map  _huffman_binary_tree_8cpp__incl.md5  _huffman_binary_tree_8h.html  _huffman_binary_tree_8h__dep__incl.map  _huffman_binary_tree_8h__dep__incl.md5  _huffman_binary_tree_8h__incl.map  _huffman_binary_tree_8h__incl.md5  _huffman_binary_tree_8h_source.html  (+111 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  functions_1.js  functions_10.js  (+23 more)
image_processing/: Compressor.cpp  Compressor.h  Dictionary.cpp  Dictionary.h  ImageProcessor.cpp  ImageProcessor.h  Pixel.cpp  Pixel.h
